ping command and slash deployment

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
     "noUncheckedIndexedAccess": true,
     "esModuleInterop": true,
     "declaration": true,
-    "noEmit": true
+    "noEmit": true,
+
+    "typeRoots": ["node_modules/@types", "src/types"]
   },
   "ts-node": {
     "esm": true
