--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
+    "dev:w": "nodemon src/index.ts",
     "build": "tsc -p tsconfig.build.json",
     "clean": "rm -rf dist",
     "lint": "eslint .",
@@ -28,6 +29,7 @@
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
     "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
     "prettier": "2.8.7",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
