--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "chalk": "^5.2.0",
     "discord.js": "^14.9.0",
     "dotenv": "^16.0.3",
     "zod": "^3.21.4"
