--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "@prisma/client": "^4.13.0",
     "chalk": "^5.2.0",
     "discord.js": "^14.9.0",
     "dotenv": "^16.0.3",
@@ -32,6 +33,7 @@
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
     "prettier": "2.8.7",
+    "prisma": "^4.13.0",
     "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.3"
